@@ -1,3 +1,7 @@
+2011-10-27 Rohin Narayan <narayan@physi.uni-heidelberg.de>
+		* Tag as TrigT1CaloMonitoring-00-10-12
+		* New job option variables and changes to job options
+
 2011-10-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-10-11
         * Leave out noDeadBad plots.
